package com.minacontrol.logistica.domain;

public enum EstadoDespacho {
    PROGRAMADO,
    EN_TRANSITO,
    ENTREGADO,
    CANCELADO
}
